[package]
name = "xniffer-web"
default-run = "xniffer"
version = "0.1.0"
authors = ["3top1a <3top1a.official@gmail.com>", "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"

[[bin]]
name = "xniffer"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.18"
eframe = { version = "0.18", default-features = true}


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm
